--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -5,28 +5,28 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>About</title>
-        <link rel="stylesheet" href="/assets/styles/style.css">
+        <link rel="stylesheet" href="assets/styles/style.css">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-        <link rel="manifest" href="/site.webmanifest">
+        <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+        <link rel="manifest" href="site.webmanifest">
     </head>
     <body>
         <header>
             <div class="logo">
-                <img src="/android-chrome-192x192.png" alt="logo">
+                <img src="android-chrome-192x192.png" alt="logo">
             </div>
             <div class="nav">
-                <a class="nav-button" href="/index.html">Projects</a>
-                <a class="active" href="/assets/pages/about.html">About</a>
-                <a class="nav-button" href="/assets/pages/contact.html">Contact</a>
+                <a class="nav-button" href="index.html">Projects</a>
+                <a class="active" href="assets/pages/about.html">About</a>
+                <a class="nav-button" href="assets/pages/contact.html">Contact</a>
             </div>
         </header>
         <main class="about-main">
             <div class="about-container">
                 <div class="headshot">
-                    <img src="/assets/images/450780920_10161959311058538_4963602717402185664_n.jpg" alt="Headshot">
+                    <img src="assets/images/450780920_10161959311058538_4963602717402185664_n.jpg" alt="Headshot">
                 </div>
                 <div class="text-box">
                     <h1>I'm Maren Stenersen</h1>
@@ -40,16 +40,16 @@
             </small>
             <div class="footer-links">
                 <a class="instagram" href="https://instagram.com" target="_blank" rel="noreferrer noopener">
-                    <img src="/assets/images/icons/instagram.png" alt="instagram">
+                    <img src="assets/images/icons/instagram.png" alt="instagram">
                 </a>
                 <a class="linkedin" href="https://www.linkedin.com" target="_blank" rel="noreferrer noopener">
-                    <img src="/assets/images/icons/linkedin.png" alt="linkedin">
+                    <img src="assets/images/icons/linkedin.png" alt="linkedin">
                 </a>
                 <a class="facebook" href="https://www.facebook.com" target="_blank" rel="noreferrer noopener">
-                    <img src="/assets/images/icons/facebook.png" alt="facebook">
+                    <img src="assets/images/icons/facebook.png" alt="facebook">
                 </a>
             </div>
         </footer>
-        <script src="/assets/js/script.js"></script>
+        <script src="assets/js/script.js"></script>
     </body>
 </html>
