--- a/index.html
+++ b/index.html
@@ -5,30 +5,30 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Portfolio</title>
-        <link rel="stylesheet" href="/assets/styles/style.css">
+        <link rel="stylesheet" href="assets/styles/style.css">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-        <link rel="manifest" href="/site.webmanifest">
+        <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+        <link rel="manifest" href="site.webmanifest">
     </head>
     <body>
         <header>
             <div class="logo">
-                <img src="/android-chrome-192x192.png" alt="logo">
+                <img src="android-chrome-192x192.png" alt="logo">
             </div>
             <div class="nav">
-                <a class="active" href="/index.html">Projects</a>
-                <a class="nav-button" href="/assets/pages/about.html">About</a>
-                <a class="nav-button" href="/assets/pages/contact.html">Contact</a>
+                <a class="active" href="index.html">Projects</a>
+                <a class="nav-button" href="assets/pages/about.html">About</a>
+                <a class="nav-button" href="assets/pages/contact.html">Contact</a>
             </div>
         </header>
         <main>
             <div class="showcase">
                 <div class="card">
                     <div class="project-image-container">
-                        <a href="/assets/pages/projects/placeholderName.html">
-                            <img src="/assets/images/hero-image.jpg" alt="project-name">
+                        <a href="assets/pages/projects/placeholderName.html">
+                            <img src="assets/images/hero-image.jpg" alt="project-name">
                         </a>
                     </div>
                     <div class="project-name-container">
@@ -37,8 +37,8 @@
                 </div>
                 <div class="card">
                     <div class="project-image-container">
-                        <a href="/assets/pages/projects/placeholderName.html">
-                            <img src="/assets/images/hero-image.jpg" alt="project-name">
+                        <a href="assets/pages/projects/placeholderName.html">
+                            <img src="assets/images/hero-image.jpg" alt="project-name">
                         </a>
                     </div>
                     <div class="project-name-container">
@@ -47,8 +47,8 @@
                 </div>
                 <div class="card">
                     <div class="project-image-container">
-                        <a href="/assets/pages/projects/placeholderName.html">
-                            <img src="/assets/images/hero-image.jpg" alt="project-name">
+                        <a href="assets/pages/projects/placeholderName.html">
+                            <img src="assets/images/hero-image.jpg" alt="project-name">
                         </a>
                     </div>
                     <div class="project-name-container">
@@ -57,8 +57,8 @@
                 </div>
                 <div class="card">
                     <div class="project-image-container">
-                        <a href="/assets/pages/projects/placeholderName.html">
-                            <img src="/assets/images/hero-image.jpg" alt="project-name">
+                        <a href="assets/pages/projects/placeholderName.html">
+                            <img src="assets/images/hero-image.jpg" alt="project-name">
                         </a>
                     </div>
                     <div class="project-name-container">
@@ -67,8 +67,8 @@
                 </div>
                 <div class="card">
                     <div class="project-image-container">
-                        <a href="/assets/pages/projects/placeholderName.html">
-                            <img src="/assets/images/hero-image.jpg" alt="project-name">
+                        <a href="assets/pages/projects/placeholderName.html">
+                            <img src="assets/images/hero-image.jpg" alt="project-name">
                         </a>
                     </div>
                     <div class="project-name-container">
@@ -77,8 +77,8 @@
                 </div>
                 <div class="card">
                     <div class="project-image-container">
-                        <a href="/assets/pages/projects/placeholderName.html">
-                            <img src="/assets/images/hero-image.jpg" alt="project-name">
+                        <a href="assets/pages/projects/placeholderName.html">
+                            <img src="assets/images/hero-image.jpg" alt="project-name">
                         </a>
                     </div>
                     <div class="project-name-container">
@@ -87,8 +87,8 @@
                 </div>
                 <div class="card">
                     <div class="project-image-container">
-                        <a href="/assets/pages/projects/placeholderName.html">
-                            <img src="/assets/images/hero-image.jpg" alt="project-name">
+                        <a href="assets/pages/projects/placeholderName.html">
+                            <img src="assets/images/hero-image.jpg" alt="project-name">
                         </a>
                     </div>
                     <div class="project-name-container">
@@ -97,8 +97,8 @@
                 </div>
                 <div class="card">
                     <div class="project-image-container">
-                        <a href="/assets/pages/projects/placeholderName.html">
-                            <img src="/assets/images/hero-image.jpg" alt="project-name">
+                        <a href="assets/pages/projects/placeholderName.html">
+                            <img src="assets/images/hero-image.jpg" alt="project-name">
                         </a>
                     </div>
                     <div class="project-name-container">
@@ -107,8 +107,8 @@
                 </div>
                 <div class="card">
                     <div class="project-image-container">
-                        <a href="/assets/pages/projects/placeholderName.html">
-                            <img src="/assets/images/hero-image.jpg" alt="project-name">
+                        <a href="assets/pages/projects/placeholderName.html">
+                            <img src="assets/images/hero-image.jpg" alt="project-name">
                         </a>
                     </div>
                     <div class="project-name-container">
@@ -125,16 +125,16 @@
             </div>
             <div class="footer-links">
                 <a class="instagram" href="https://instagram.com" target="_blank" rel="noreferrer noopener">
-                    <img src="/assets/images/icons/instagram.png" alt="instagram">
+                    <img src="assets/images/icons/instagram.png" alt="instagram">
                 </a>
                 <a class="linkedin" href="https://www.linkedin.com" target="_blank" rel="noreferrer noopener">
-                    <img src="/assets/images/icons/linkedin.png" alt="linkedin">
+                    <img src="assets/images/icons/linkedin.png" alt="linkedin">
                 </a>
                 <a class="facebook" href="https://www.facebook.com" target="_blank" rel="noreferrer noopener">
-                    <img src="/assets/images/icons/facebook.png" alt="facebook">
+                    <img src="assets/images/icons/facebook.png" alt="facebook">
                 </a>
             </div>
         </footer>
-        <script src="/assets/js/script.js"></script>
+        <script src="assets/js/script.js"></script>
     </body>
 </html>
